tests/rosetta/out/Zig/bitmap.error
zig build: exit status 1
/tmp/bitmap.zig:167:13: error: local variable is never mutated
/tmp/bitmap.zig:167:13: note: consider using 'const'
/tmp/bitmap.zig:166:13: error: local variable is never mutated
/tmp/bitmap.zig:166:13: note: consider using 'const'
/tmp/bitmap.zig:165:13: error: local variable is never mutated
/tmp/bitmap.zig:165:13: note: consider using 'const'
